# fastapi-clean-architecture-template

./: .dockerignore  Dockerfile  README.md
.github/workflows/: docker-image.yml  formatter.yml  pytest.yml
migrations/: env.py
migrations/versions/: 50ebf59855dd_initial_migration.py
src/: main.py  pyproject.toml
src/api/v1/: __init__.py  routes.py
src/api/v1/endpoints/: __init__.py  auth.py  user.py
src/core/: container.py  database.py  dependencies.py  security.py  settings.py
src/model/: user.py
src/model/abc/: base.py
src/repository/: __init__.py  user.py
src/repository/abc/: __init__.py  base.py  contracts.py
src/schema/: __init__.py  auth.py  user.py
src/services/: auth.py  user.py
src/services/abc/: base.py  contracts.py
src/util/: auth.py
tests/: conftest.py
tests/integration_tests/: test_auth_router.py  test_client.py
tests/unit_tests/: test_container.py  test_fixture.py
