[project]
name = "FastAPI-Clean-Architecture-Template"
version = "0.1.0"
description = "Base template for apis"
readme = "../README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "argon2-cffi>=25.1.0",
    "asyncpg>=0.31.0",
    "dependency-injector>=4.49.0",
    "fastapi>=0.135.2",
    "fastapi-pagination>=0.15.11",
    "fastapi-querybuilder>=0.1.13",
    "gunicorn>=25.2.0",
    "loguru>=0.7.3",
    "passlib>=1.7.4",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.13.1",
    "pydantic[email]>=2.12.5",
    "pyjwt>=2.12.1",
    "sqlmodel>=0.0.37",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.7",
    "uvicorn>=0.42.0",
]
optional = [
    "pymysql>=1.1.2",
]
