[project]
name = "FastAPI-Clean-Architecture-Template"
version = "0.1.1"
description = "Base template for apis"
readme = "../README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "argon2-cffi>=25.1.0",
    "asyncpg>=0.31.0",
    "dependency-injector>=4.49.0",
    "fastapi>=0.135.2",
    "fastapi-pagination>=0.15.11",
    "fastapi-querybuilder>=0.1.13",
    "gunicorn>=25.2.0",
    "loguru>=0.7.3",
    "passlib>=1.7.4",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.14.2",
    "pydantic[email]>=2.12.5",
    "pyjwt>=2.13.0",
    "sqlmodel>=0.0.37",


    # -----------------------------------------------------------------------
    # Constraints de seguridad
    # -----------------------------------------------------------------------

    # alembic → mako
    # CVE-2026-44307 (HIGH)   fix: 1.3.12  path traversal en TemplateLookup (Windows)
    # CVE-2026-41205 (MEDIUM) fix: 1.3.11  information disclosure via path traversal
    "mako>=1.3.12",

    # fastapi-querybuilder → poetry → cachecontrol → requests → urllib3
    # fastapi-querybuilder → poetry → dulwich → urllib3
    # CVE-2026-44431 (HIGH) fix: 2.7.0
    # CVE-2026-44432 (HIGH) fix: 2.7.0
    "urllib3>=2.7.0",

    # fastapi-querybuilder → poetry
    # CVE-2026-34591 (HIGH) fix: 2.3.3  arbitrary file write via crafted package
    # CVE-2026-41140 (LOW)  fix: 2.3.4  path traversal / arbitrary file write
    "poetry>=2.3.4",

    # GHSA-537c-gmf6-5ccf (HIGH) - cryptography
    "cryptography>=48.0.1",
    
    # CVE-2026-42305, CVE-2026-42563, CVE-2026-52726 (HIGH) - dulwich
    "dulwich>=1.2.5",
    
    # fastapi → starlette  
    # CVE-2026-54283, CVE-2026-48818 (HIGH) - starlette
    "starlette>=1.3.1",
    
    # GHSA-6v7p-g79w-8964 (HIGH) - msgpack
    "msgpack>=1.2.1",
    
    # CVE-2026-45409 (MEDIUM) - idna
    "idna>=3.15",
]

[dependency-groups]
dev = [
    "aiofiles>=25.1.0",
    "anyio>=4.13.0",
    "httpx>=0.28.1",
    "pytest-asyncio>=1.3.0",
    "pytest-trio>=0.8.0",
    "ruff>=0.15.7",
    "uvicorn>=0.42.0",

    # -----------------------------------------------------------------------
    # Constraints de seguridad
    # -----------------------------------------------------------------------

    # CVE-2025-71176 (MEDIUM) fix: 9.0.3  DoS / privilege escalation via tmp dir inseguro
    "pytest>=9.0.3",

    # pytest → pygments
    # CVE-2026-4539 (LOW) fix: 2.20.0  ReDoS en AdlLexer
    "pygments>=2.20.0",
]

optional = [
    "pymysql>=1.1.2",
]